# test_task

./: .gitignore  LICENSE
test_task/: CMakeLists.txt
test_task/test_app/: CMakeLists.txt  appcontroller.cpp  appcontroller.h  main.cpp  main.qml  model.cpp  model.h  worker.cpp  worker.h
test_task/test_app/utils/: barchutils.h  pimpl.h
test_task/test_lib/: CMakeLists.txt  archivator.cpp  archivator.h
